Fix: Links arrumados

--- a/Web-data-viz/public/css/loginCadastro.css
+++ b/Web-data-viz/public/css/loginCadastro.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('/public/assets/imgTeste.jpg');
+    background: url('/assets/imgTeste.jpg');
     background-size: cover;
     background-position: center;
 } 
