--- a/Web-data-viz/public/css/loginCadastro.css
+++ b/Web-data-viz/public/css/loginCadastro.css
@@ -1,12 +1,18 @@
+:root {
+    --cor-fundo: #E0F7D9;
+    --cor-texto: #5d363d;
+    --fonte-serif: 'Momo Trust Display', serif;
+
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Momo Trust Display', serif;
 }
 
 body {
-    font-family: 'Momo Trust Display', serif;
+    font-family: var(--fonte-serif);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,8 +20,51 @@ body {
     background: url('/assets/imgTeste.jpg');
     background-size: cover;
     background-position: center;
-} 
-.wrapper{
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    padding: 20px 0;
+    background-color: var(--cor-fundo);
+    backdrop-filter: blur(5px);
+}
+
+.header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    font-size: 1.8rem;
+    margin: 0;
+    color: var(--cor-texto);
+}
+
+.nav a {
+    margin-left: 20px;
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--cor-texto);
+}
+
+.wrapper {
     width: 420px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
@@ -27,19 +76,19 @@ body {
     padding: 30px 40px;
 }
 
-.wrapper h1{
+.wrapper h1 {
     font-size: 36px;
     text-align: center;
     justify-content: center;
 }
 
-.wrapper .input-caixa{
+.wrapper .input-caixa {
     width: 100%;
     height: 50%;
     margin: 30px 0;
 }
 
-.input-caixa input{
+.input-caixa input {
     font-size: 17px;
     width: 100%;
     height: 100%;
@@ -65,26 +114,26 @@ body {
     font-size: 20px;
 }
 
-.wrapper .relembrar-senha{
+.wrapper .relembrar-senha {
     display: flex;
     justify-content: space-between;
     font-size: 14px;
     margin: -15px 0 15px;
 }
 
-.relembrar-senha label input{
+.relembrar-senha label input {
     accent-color: #fff;
     margin-right: 3px;
 
 }
 
-.relembrar-senha a{
+.relembrar-senha a {
     color: #fff;
     text-decoration: none;
 }
 
 .relembrar-senha a:hover {
-    text-decoration: underline  ;
+    text-decoration: underline;
 }
 
 .wrapper .button {
