--- a/Web-data-viz/public/css/style.css
+++ b/Web-data-viz/public/css/style.css
@@ -102,8 +102,7 @@ a:hover {
     color: #fff;
     padding: 10px 25px;
     border-radius: 5px;
-    font-family: var(--fonte-sans);
-    font-family: var(--fonte-sans);
+    font-family: var(--fonte-serif);
     transition: all 0.3s ease-in-out;
 }
 
@@ -216,9 +215,9 @@ a:hover {
 	gap: 20px;
 }
 .div-principal{
-    background-color: #f5f9f9; /* Quase branco com tom frio */
-    color: #2d1a1f; /* Texto bem escuro */
-    border-left: 4px solid var(--cor-botao-fundo); 
+    background-color: #f5f9f9;
+    color: #2d1a1f;
+    border-left: 4px solid var(--cor-botao-fundo);   
 	padding: 30px;
 	border-radius: 8px;
 	box-shadow: 0 4px 10px rgba(49, 3, 87, 0.1);
@@ -244,6 +243,7 @@ a:hover {
 
 .lista li:hover {
     background-color: var(--cor-texto-principal); 
+    cursor: pointer;
     color: white; 
     transform: scale(1.05); 
 }
@@ -308,85 +308,6 @@ a:hover {
     background-color: var(--cor-fundo);
 }
 
-
-/*parte de formulário(acho que irei tirar)*/
-.contato-grid {
-    display: grid;
-    grid-template-columns: 1fr 1.5fr;
-    gap: 50px;
-    align-items: start;
-}
-
-.contato-info p {
-    font-size: 1.1rem;
-    line-height: 1.8;
-}
-
-.contato-form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-.form-group-inline {
-    display: flex;
-    gap: 20px;
-    width: 100%;
-}
-
-.input-wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.full-width {
-    width: 100%;
-}
-
-.contato-form label {
-    font-size: 0.9rem;
-    color: var(--cor-texto-secundario);
-    margin-bottom: 5px;
-}
-.card_erro {
-	display: none;
-	background-color: #fff;
-	color: black;
-	width: 230px;
-	position: relative;
-	border-radius: 15px;
-	border: #4B2C8C 3px solid;
-	padding: 5px;
-	margin-right: 10%;
-	margin-bottom: 5px;
-}
-
-
-.contato-form input,
-.contato-form textarea {
-    padding: 10px 15px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: var(--cor-fundo-input);
-    border-radius: 3px;
-    font-family: var(--fonte-sans);
-    font-size: 1rem;
-    width: 100%;
-}
-
-.contato-form input:focus,
-.contato-form textarea:focus {
-    outline: 1px solid var(--cor-texto-principal);
-    border-color: var(--cor-texto-principal);
-    background-color: #fff;
-}
-
-
-.contato-form .botao-secundario {
-    align-self: flex-start;
-    /* alinha botão */
-    margin-top: 10px;
-}
 
 /* rodapé*/
 .footer {
