--- a/Web-data-viz/public/css/loginCadastro.css
+++ b/Web-data-viz/public/css/loginCadastro.css
@@ -32,6 +32,7 @@ body {
 
 a {
     text-decoration: none;
+    color: #fff;
 }
 
 .header {
@@ -143,10 +144,14 @@ a {
     border: none;
     outline: none;
     border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    box-shadow: 0 0 10px rgba(255, 206, 206, 0.1);
     cursor: pointer;
-    font-size: 16px;
-    color: #333;
-    font-weight: 600;
+    font-size: 1rem;
+    color: var(--cor-texto);
+    font-weight: 700;
     margin: 20px 0 15px;
+}
+.wrapper .button a {
+    color: var(--cor-texto);
+
 }
