--- a/Web-data-viz/public/css/dashboard.css
+++ b/Web-data-viz/public/css/dashboard.css
@@ -198,6 +198,7 @@ body {
 
 /* respostas */
 .detalhes-questoes {
+    display: none;
     background-color: white;
     border-radius: 10px;
     padding: 30px;
@@ -253,10 +254,28 @@ body {
     color: white;
 }
 
+.botao-acao :nth-child(even){
+    padding: 15px 40px;
+    font-size: 1.1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    color: white;
+}
 .botao-refazer {
     background-color: var(--botao);
 }
 
 .botao-home {
     background-color: #3498db;
+}
+
+#conteudo-oculto {
+  display: none; /* Começa escondido */
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.visivel {
+  display: block; /* Torna visível */
 }
